<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/productdetailsinfo_ProductName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:drawablePadding="10dp"
        android:gravity="center_vertical"
        android:maxLines="1"
        android:text="@string/dummy_ProductName"
        android:textColor="@color/colorPrimaryText"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/productdetailsinfo_ProductDesc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:drawablePadding="10dp"
        android:gravity="center_vertical"
        android:maxLines="2"
        android:text="@string/dummy_Desc"
        android:textColor="@color/colorPrimaryText"
        android:textSize="16sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/productdetailsinfo_ProductName" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:drawablePadding="10dp"
        android:gravity="center_vertical"
        android:maxLines="1"
        android:text="Rs. "
        android:textColor="@color/colorPrimaryText"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/productdetailsinfo_ProductDesc" />

    <TextView
        android:id="@+id/productdetailsinfo_Price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:drawablePadding="10dp"
        android:gravity="center_vertical"
        android:maxLines="1"
        android:text="500 "
        android:textColor="@color/colorPrimaryText"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView5"
        app:layout_constraintStart_toEndOf="@+id/textView5"

        app:layout_constraintTop_toBottomOf="@+id/productdetailsinfo_ProductDesc" />

    <TextView
        android:id="@+id/productdetailsinfo_Piece"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:drawablePadding="10dp"

        android:gravity="center_vertical"
        android:maxLines="1"
        android:text="(per Unit Piece)"
        android:textColor="@color/colorPrimaryText"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/productdetailsinfo_Price"
        app:layout_constraintTop_toBottomOf="@+id/productdetailsinfo_ProductDesc"

        />

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/productdetailsinfo_Price">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:drawablePadding="10dp"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:text="In Stock: "
            android:textColor="@color/colorIcons"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/productdetails_Available"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:drawablePadding="10dp"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:text="Yes"
            android:textColor="@color/colorIcons"
            android:textSize="18sp"
            android:textStyle="bold" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:cardCornerRadius="10dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textCategory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="14dp"
                    android:paddingTop="14dp"
                    android:paddingRight="14dp"
                    android:text="@string/category"
                    android:textColor="@color/colorPrimaryDark" />

                <TextView
                    android:id="@+id/category"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="14dp"
                    android:paddingTop="5dp"
                    android:paddingRight="14dp"
                    android:paddingBottom="14dp"
                    android:text="@string/dot_loading"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="16sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:cardCornerRadius="10dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textPharmacy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="14dp"
                    android:paddingTop="14dp"
                    android:paddingRight="14dp"
                    android:text="@string/pharmacy"
                    android:textColor="@color/colorPrimaryDark" />

                <TextView
                    android:id="@+id/pharmacy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="14dp"
                    android:paddingTop="5dp"
                    android:paddingRight="14dp"
                    android:paddingBottom="14dp"
                    android:text="@string/dot_loading"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="16sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout6">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:cardCornerRadius="10dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textSubCategory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="14dp"
                    android:paddingTop="14dp"
                    android:paddingRight="14dp"
                    android:text="@string/subcategory"
                    android:textColor="@color/colorPrimaryDark" />

                <TextView
                    android:id="@+id/subcategory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="14dp"
                    android:paddingTop="5dp"
                    android:paddingRight="14dp"
                    android:paddingBottom="14dp"
                    android:text="@string/dot_loading"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="16sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:cardCornerRadius="10dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textBrand"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="14dp"
                    android:paddingTop="14dp"
                    android:paddingRight="14dp"
                    android:text="@string/brand"
                    android:textColor="@color/colorPrimaryDark" />

                <TextView
                    android:id="@+id/brand"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="14dp"
                    android:paddingTop="5dp"
                    android:paddingRight="14dp"
                    android:paddingBottom="14dp"
                    android:text="@string/dot_loading"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="16sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>