<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/productdetail_TopLayout"
    android:id="@+id/productdetail_MiddleLayout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/productdetails_ProductName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="16dp"

            android:drawablePadding="10dp"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:text="..."
            android:textColor="@color/colorPrimaryText"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/productdetails_ProductDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="16dp"
            android:drawablePadding="10dp"
            android:gravity="center_vertical"
            android:maxLines="2"
            android:text="..."
            android:textColor="@color/colorPrimaryText"
            android:textSize="16sp"
            android:textStyle="normal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:text="Rs. "
                android:textColor="@color/colorPrimaryText"
                android:textSize="24sp"
                android:textStyle="bold"
                android:maxLines="1"/>

            <TextView
                android:id="@+id/productDetails_Price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:text="..."
                android:textColor="@color/colorPrimaryText"
                android:textSize="26sp"
                android:textStyle="bold"
                android:maxLines="1"/>

            <TextView
                android:id="@+id/productDetails_Piece"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:text="(per Unit Piece)"
                android:textColor="@color/colorPrimaryText"
                android:textSize="18sp"
                android:textStyle="bold" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:text="In Stock: "
                android:textColor="@color/colorIcons"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/productdetails_Available"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:text="..."
                android:textColor="@color/colorIcons"
                android:textSize="18sp"
                android:textStyle="bold"
                android:maxLines="1"/>


        </LinearLayout>

        <!--Price Layout below-->

        <LinearLayout
            android:id="@+id/Products_Price_LinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:visibility="gone">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:cardCornerRadius="10dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textLeafPrice"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="14dp"
                        android:paddingTop="14dp"
                        android:paddingRight="14dp"
                        android:text="Leaf Price"
                        android:textColor="@color/colorPrimaryDark"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/LeafPrice"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="14dp"
                        android:paddingTop="5dp"
                        android:paddingRight="14dp"
                        android:paddingBottom="14dp"
                        android:text="@string/dot_loading"
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="16sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:cardCornerRadius="10dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textBoxPrice"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="14dp"
                        android:paddingTop="14dp"
                        android:paddingRight="14dp"
                        android:text="Box Price"
                        android:textColor="@color/colorPrimaryDark"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/BoxPrice"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="14dp"
                        android:paddingTop="5dp"
                        android:paddingRight="14dp"
                        android:paddingBottom="14dp"
                        android:text="@string/dot_loading"
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="16sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <!--Price Layout above-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:cardCornerRadius="10dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textCategory"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="14dp"
                        android:paddingTop="14dp"
                        android:paddingRight="14dp"
                        android:text="@string/category"
                        android:textColor="@color/colorPrimaryDark"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/category"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="14dp"
                        android:paddingTop="5dp"
                        android:paddingRight="14dp"
                        android:paddingBottom="14dp"
                        android:text="@string/dot_loading"
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="16sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:cardCornerRadius="10dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textPharmacy"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="14dp"
                        android:paddingTop="14dp"
                        android:paddingRight="14dp"
                        android:text="@string/pharmacy"
                        android:textColor="@color/colorPrimaryDark"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/pharmacy"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="14dp"
                        android:paddingTop="5dp"
                        android:paddingRight="14dp"
                        android:paddingBottom="14dp"
                        android:text="@string/dot_loading"
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="16sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:cardCornerRadius="10dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textSubCategory"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="14dp"
                        android:paddingTop="14dp"
                        android:paddingRight="14dp"
                        android:text="@string/subcategory"
                        android:textColor="@color/colorPrimaryDark"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/subcategory"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="14dp"
                        android:paddingTop="5dp"
                        android:paddingRight="14dp"
                        android:paddingBottom="14dp"
                        android:text="@string/dot_loading"
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="16sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:cardCornerRadius="10dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textBrand"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="14dp"
                        android:paddingTop="14dp"
                        android:paddingRight="14dp"
                        android:text="@string/brand"
                        android:textColor="@color/colorPrimaryDark"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/brand"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="14dp"
                        android:paddingTop="5dp"
                        android:paddingRight="14dp"
                        android:paddingBottom="14dp"
                        android:text="@string/dot_loading"
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="16sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>